Make stackoverflow widget on home page work correctly.  Add template to js code because embeddeding js in XML isn't fun.  Unwrap the placement div

--- a/css/screen.css
+++ b/css/screen.css
@@ -1784,3 +1784,12 @@ article.twitter {
 .recent-rss h4 {
 	margin: .2em 0 .4em 0;
 }
+
+.so-widget-body {
+    height: 3.6em;
+    overflow:hidden;
+}
+
+.so-widget-body p {
+    margin: 0;
+}
